<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#cfd8dc"
    android:gravity="center_horizontal">

    <TextView android:text="@string/title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoText="true"
        android:id="@+id/title"
        android:textColor="@android:color/black"
        android:textSize="25dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotifyStreamer"
        android:id="@+id/spotifyStreamer"
        android:width="250dp"
        android:layout_marginTop="40dp"
        android:onClick="buttonToast"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoresApp"
        android:id="@+id/scoresApp"
        android:width="250dp"
        android:layout_marginTop="10dp"
        android:onClick="buttonToast"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryApp"
        android:id="@+id/linraryApp"
        android:width="250dp"
        android:layout_marginTop="10dp"
        android:onClick="buttonToast"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buildItBigger"
        android:id="@+id/buildItBigger"
        android:width="250dp"
        android:layout_marginTop="10dp"
        android:onClick="buttonToast"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xyzReader"
        android:id="@+id/xyzReader"
        android:width="250dp"
        android:layout_marginTop="10dp"
        android:onClick="buttonToast"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myApp"
        android:id="@+id/myApp"
        android:width="250dp"
        android:layout_marginTop="10dp"
        android:onClick="buttonToast"
        android:background="#F08C35"
        style="?android:attr/borderlessButtonStyle"/>

</LinearLayout>
